# backend

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  openapi.json  pyproject.toml  seed.py  seed_all_roles.py  startup_debug.txt
alembic/: env.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/core/: __init__.py  constants.py  exceptions.py  middleware.py  security.py
app/models/: __init__.py  ai.py  base.py  content.py  learning.py  progress.py  social.py  subscription.py  user.py
app/routers/: admin.py  ai.py  analytics.py  auth.py  content.py  import_content.py  learning.py  notifications.py  opportunities.py  progress.py  social.py  students.py  subscriptions.py  users.py
app/schemas/: admin.py  ai.py  auth.py  common.py  content.py  learning.py  progress.py  social.py  subscription.py  user.py
app/services/: admin_user_service.py  ai_service.py  auth_service.py  content_service.py  import_service.py  learning_service.py  notification_service.py  progress_service.py  social_service.py  user_service.py
app/utils/: content_payloads.py  (+2 more)
scratch/: check_db.py  inspect_lessons.py  inspect_questions.py  inspect_users.py  list_langs.py  migrate_lessons.py  quick_fix.py  seed_demo_questions.py  test_api.py  test_e2e_flow.py
scripts/: clear_seed_content.py  seed_content.py  seed_deployed_test_content.py  seed_real_content.py  seed_users.py  test_email.py
tests/: conftest.py  test_auth.py  test_content_payloads.py  test_real_seed_content.py  test_users.py  test_week1_4_5_mvp_calendar.py  test_week3_progress_notifications.py
